2011-12-27  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/lst.c, gpasm/gpasm.c, gpasm/directive.c, gpasm/gperror.c,
    gpasm/gpasm.h: make listing more compatible with MPASM
  * gplink/script.c, gputils/gpvc.c, gputils/dump.c, gputils/block.c,
    libgputils/gpmemory.c, libgputils/gpcofflink.h:
    fixed warnings: variable set but not used
  * gpasm/parse.y: fixed identation

2011-12-24  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/parse.y, gpasm/gpasm.c, gpasm/gpasm.h, gpasm/directive.c,
    gpasm/scan.h, gpasm/scan.l:
    proper "end" line handling, include the "end" line in the asm listing

2011-12-18  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/gpasm.h, gpasm/directive.c, gpasm/special.c, libgputils/gpopcode.h:
    added "doer" field to insn structure, get rid of ugly "opcode" field abuse
    for the doer function pointer

2011-12-11  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/deps.c: fixed bug #2911936: gpasm removes *.d files while compiling
  * gpasm/gpasm.c: fixed crash in absolute mode
  * libgputils/gpcoff.h, gputils/gpvo.c: added F_ABSOLUTE COFF flag

2011-12-10  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/directive.c, gpasm/gperror.c, gpasm/gperror.h:
    fixed bug #3153394: PIC18 - relative branch - revision v595:
    added warnig for odd traget address;
    code generated for odd target address is now equal to the code 
    generated by MPASM
  * gpasm/gpasm.c, libgputils/gpcoff.h, gputils/gpvo.c:
    fixed bug #3310962: gpasm extended mode -- MPLAB message:
    added F_EXTENDED18 COFF flag if 18xx extended mode enabled
  * gpasm/lst.c: fixed bug #2831194: Column formatting in gpasm lst files
  * gplink/map.c: fixed bug #3434584: [PIC16F] Incorrect data in MAP file

2011-12-08  Borut Razem  <borutr@users.sourceforge.net>
  * libgputils/gpprocessor.c: corrected coff_type for __16CR54C

2011-12-04  Borut Razem  <borutr@users.sourceforge.net>